read email styles

--- a/src/pug/components/email-main.pug
+++ b/src/pug/components/email-main.pug
@@ -36,7 +36,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Sally Fields
-                .email-title Title of Email
+                .email-title Its about Steven
                 .email-time 9:42 AM
                 .email-actions
                     i.fas.fa-archive
@@ -69,7 +69,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Bladder Stone Mark
-                .email-title Title of Email
+                .email-title Have you got the papers?
                 .email-time Oct 5
                 .email-actions
                     i.fas.fa-archive
@@ -80,7 +80,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Demo Campaign
-                .email-title Title of Email
+                .email-title Join the fight!
                 .email-time Oct 2
                 .email-actions
                     i.fas.fa-archive
@@ -91,7 +91,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Mail Service
-                .email-title Title of Email
+                .email-title Letter arriving soon!
                 .email-time Oct 1
                 .email-actions
                     i.fas.fa-archive
@@ -102,7 +102,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Carlton Arms
-                .email-title Title of Email
+                .email-title Tour our new location?
                 .email-time Oct 1
                 .email-actions
                     i.fas.fa-archive
@@ -113,84 +113,84 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Momosisas
-                .email-title Title of Email
+                .email-title A retreat for couples
                 .email-time Sept 28
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Shoulder Singer
-                .email-title Title of Email
+                .email-title The time of a life
                 .email-time Sept 15
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender English Master
-                .email-title Title of Email
+                .email-title Test your vocabulary
                 .email-time Sept 14
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Mom
-                .email-title Title of Email
+                .email-title Check your mailbox!
                 .email-time Sept 13
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Nester Blackreach
-                .email-title Title of Email
+                .email-title Your local bookshop needs funding
                 .email-time Sept 13
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Mister Klein
-                .email-title Title of Email
+                .email-title Find a job worth the wait
                 .email-time Sept 12
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Dad
-                .email-title Title of Email
+                .email-title Check your email
                 .email-time Sept 11
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Klestin Creature
-                .email-title Title of Email
+                .email-title Wanna know how I got your email
                 .email-time Sept 11
                 .email-actions
                     i.fas.fa-archive
@@ -201,7 +201,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender The Manumission Society
-                .email-title Title of Email
+                .email-title Freedom at any cost
                 .email-time Sept 7
                 .email-actions
                     i.fas.fa-archive
