--- a/src/styles/components/_email-main.scss
+++ b/src/styles/components/_email-main.scss
@@ -112,9 +112,14 @@
             position: relative;
             display: flex;
             align-items: center;
-            background-color: getColor(em_bg);
             padding: 15px;
             border-bottom: 1px solid getColor(outline-em);
+            background-color: getColor(em_bg);
+            
+            &.read{
+                border-bottom: 1px solid rgba(68, 68, 68, 0.11);
+                background-color: getColor(em_bg_read);
+            }
 
             .email-sender {
                 position: absolute;
