--- a/src/styles/libs/_variables.scss
+++ b/src/styles/libs/_variables.scss
@@ -18,6 +18,7 @@ $color_palette: (
     fg: #fff,
     outline: rgba(255, 255, 255, 0.116),
     outline-bright: rgba(255, 255, 255, 0.308),
+    outline-dark: rgba(83, 83, 83, 0.089),
     //Searchbar
     search: rgba(255, 255, 255, 0.267),
     placehold: #fff,
@@ -26,7 +27,8 @@ $color_palette: (
     side-icon: rgba(255, 255, 255, 0.664),
     folder-hover: rgba(255, 255, 255, 0.158),
     // Emails
-    em_bg: rgba(219, 219, 219, 0.87),
+    em_bg: rgba(252, 252, 252, 0.87),
+    em_bg_read: rgba(219, 219, 219, 0.87),
     filter-hover-bg: rgba(0, 0, 0, 0.062),
     filter: #6e6b6d,
     rd: #d93025,
