good stopping point

--- a/src/pug/components/email-main.pug
+++ b/src/pug/components/email-main.pug
@@ -98,7 +98,7 @@
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Carlton Arms
@@ -131,7 +131,7 @@
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email.read
+            .email
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender English Master
@@ -212,40 +212,40 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Christopher Hitchens
-                .email-title Title of Email
+                .email-title Mortality
                 .email-time Sept 3
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender E. M. Forster
-                .email-title Title of Email
+                .email-title A Room with a View
                 .email-time August 15
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender George Orwell
-                .email-title Title of Email
+                .email-title Homage to Catalonia
                 .email-time August 14
                 .email-actions
                     i.fas.fa-archive
                     i.fas.fa-trash
                     i.fas.fa-envelope-open
                     i.fas.fa-clock
-            .email
+            .email.read
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Mark Twain
-                .email-title Title of Email
+                .email-title Old Boy Blue
                 .email-time August 13
                 .email-actions
                     i.fas.fa-archive
@@ -256,7 +256,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Margaret Singer
-                .email-title Title of Email
+                .email-title Looking for Inventors
                 .email-time August 10
                 .email-actions
                     i.fas.fa-archive
@@ -267,7 +267,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Pumpkin Head
-                .email-title Title of Email
+                .email-title October is just around the corner
                 .email-time August 7
                 .email-actions
                     i.fas.fa-archive
@@ -278,7 +278,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Sister Frieda
-                .email-title Title of Email
+                .email-title Join Our Cult!
                 .email-time August 5
                 .email-actions
                     i.fas.fa-archive
@@ -289,7 +289,7 @@
                 input(type="checkbox" name="")
                 i.far.fa-star
                 .email-sender Dindra Maxime
-                .email-title Title of Email
+                .email-title What's it to us?
                 .email-time May 23
                 .email-actions
                     i.fas.fa-archive
