--- a/src/pug/components/side-bar.pug
+++ b/src/pug/components/side-bar.pug
@@ -14,27 +14,27 @@
         .folder
             i.fas.fa-star
             .folder-name Starred
-            .cont-num 5
+            .cont-num 
         .folder
             i.fas.fa-clock
             .folder-name Snoozed
-            .cont-num 5
+            .cont-num 4
         .folder
             i.fas.fa-tag
             .folder-name Important
-            .cont-num 5
+            .cont-num 19
         .folder
             i.fas.fa-paper-plane
             .folder-name Sent
-            .cont-num 5
+            .cont-num 23
         .folder
             //- i.fas.fa-paper-plane
             .folder-name Spam
-            .cont-num 5
+            .cont-num 67
         .folder
             //- i.fas.fa-paper-plane
             .folder-name All Mail
-            .cont-num 5
+            .cont-num 230
 
     .meet-box
         .head Meet
