--- a/src/styles/components/_email-main.scss
+++ b/src/styles/components/_email-main.scss
@@ -3,17 +3,16 @@
 .email-main {
     grid-column: 2;
 
-    .scroll {
-        overflow: scroll;
-        height: 86vh;
-    }
-
     .actions {
         // float: top;
         // position: absolute;
         @include flex-center;
         color: getColor(side-icon);
         padding: 15px 20px;
+
+        i{
+            cursor: pointer;
+        }
 
         .left-actions {
             @include flex-center;
@@ -29,6 +28,12 @@
                 margin-right: 30px;
             }
         }
+    }
+
+    .scroll {
+        cursor: pointer;
+        overflow: scroll;
+        height: 86vh;
     }
 
     .filters {
@@ -115,8 +120,8 @@
             padding: 15px;
             border-bottom: 1px solid getColor(outline-em);
             background-color: getColor(em_bg);
-            
-            &.read{
+
+            &.read {
                 border-bottom: 1px solid rgba(68, 68, 68, 0.11);
                 background-color: getColor(em_bg_read);
             }
